--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "css-loader": "^0.28.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.6.0"
   }
 }
